添加 SKU 自动拉取定时任务和适配逻辑

--- a/doc/DSCO同步领星设计文档/4.配置设计.md
+++ b/doc/DSCO同步领星设计文档/4.配置设计.md
@@ -203,7 +203,8 @@ log:
     "ack_to_dsco": { "enable": false, "cron": "0 15 * * * *", "size": 50, "multi_ban": false },
     "ship_to_dsco": { "enable": false, "cron": "0 20 * * * *", "size": 50, "multi_ban": false },
     "invoice_to_dsco": { "enable": false, "cron": "0 25 * * * *", "size": 50, "multi_ban": false },
-    "sync_stock": { "enable": false, "cron": "0 30 1 * * *", "size": 50 }
+    "sync_stock": { "enable": false, "cron": "0 30 1 * * *", "size": 50 },
+    "pull_sku_pair": { "enable": false, "cron": "0 0 3 * * *", "size": 1000 }
   },
   "mapping": {
     "shop": { "1000011436": "110658143132021760" },
@@ -221,6 +222,7 @@ log:
 字段说明（关键口径）：
 - `jobs.*.cron`：cron 表达式（UTC 时区）；使用 6 段（含秒）格式。
 - `jobs.*.size`：单次执行处理的最大条数上限（所有任务统一都有该字段）。
+- `jobs.pull_sku_pair`：每日自动拉取领星配对关系并更新 `mapping.sku`；`size` 用作分页大小（建议 1000+）；导出审计文件落盘到 `exports/sku-mapping-pull/{yyyy-MM-dd}/`，由 `cleanup_exports` 统一清理。
 - `mapping.shop`：店铺/渠道 ID 映射（key/value 都按字符串处理）。
 - `mapping.warehouse`：仓库 ID 映射（key/value 都按字符串处理）。
 - `mapping.sku`：SKU 映射（配置方向为 DSCO SKU -> 领星 SKU；推单到领星时可用于补齐 sku；回传时需构建反向映射：领星 SKU -> DSCO partnerSku）。
