--- a/doc/DSCO同步领星设计文档/4.配置设计.md
+++ b/doc/DSCO同步领星设计文档/4.配置设计.md
@@ -203,7 +203,7 @@ log:
     "ack_to_dsco": { "enable": false, "cron": "0 15 * * * *", "size": 50, "multi_ban": false },
     "ship_to_dsco": { "enable": false, "cron": "0 20 * * * *", "size": 50, "multi_ban": false },
     "invoice_to_dsco": { "enable": false, "cron": "0 25 * * * *", "size": 50, "multi_ban": false },
-    "sync_stock": { "enable": false, "cron": "0 30 1 * * *", "size": 50 },
+    "sync_stock": { "enable": false, "cron": "0 30 1 * * *", "size": 50, "sync": false },
     "pull_sku_pair": { "enable": false, "cron": "0 0 3 * * *", "size": 1000 }
   },
   "mapping": {
@@ -250,6 +250,7 @@ log:
 | `jobs.<job>.enable` | bool | 是 | 是否纳入定时调度；`false` 表示不定时触发（但 Admin 手动触发不受此开关限制） |
 | `jobs.<job>.cron` | string | 是 | cron 表达式（UTC 时区） |
 | `jobs.<job>.size` | int | 是 | 单次执行处理条数上限（分页大小/批量大小的统一口径） |
+| `jobs.<job>.sync` | bool | 否 | 是否执行“写回/同步”动作；目前仅 `sync_stock` 任务读取该配置；默认 `false`（仅拉取并记录，不回写 DSCO inventory） |
 | `jobs.<job>.multi_ban` | bool | 否 | 是否禁止处理“多行/多数量”订单；仅 `ack_to_dsco`/`ship_to_dsco`/`invoice_to_dsco` 任务读取该配置；默认 `false`（不禁止） |
 
 cron 推荐使用 6 段（含秒）的格式：
@@ -334,7 +335,7 @@ cron 推荐使用 6 段（含秒）的格式：
     "ack_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 200, "multi_ban": false },
     "ship_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 200, "multi_ban": false },
     "invoice_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 50, "multi_ban": false },
-    "sync_stock": { "enable": true, "cron": "0 0 0 * * *", "size": 200 },
+    "sync_stock": { "enable": true, "cron": "0 0 0 * * *", "size": 200, "sync": true },
     "cleanup_exports": { "enable": true, "cron": "0 0 */1 * * *", "size": 1 }
   },
   "mapping": {
