--- a/doc/DSCO同步领星设计文档/8.admin后端定义.md
+++ b/doc/DSCO同步领星设计文档/8.admin后端定义.md
@@ -147,6 +147,7 @@ API：
 
 API：
 - 查询：`GET /admin/api/dsco_warehouse_sync/list`
+- 条件选项：`GET /admin/api/dsco_warehouse_sync/options`（用于动态下拉：dsco_warehouse_id / lingxing_warehouse_id）
 - 导出：`POST /admin/api/export/dsco_warehouse_sync`
 
 查询入参（QueryString，分页 + 筛选）：
@@ -156,6 +157,7 @@ API：
 - `dsco_warehouse_sku`
 - `lingxing_warehouse_id`
 - `lingxing_warehouse_sku`
+- `diff_range`：diff 区间筛选（可选值：`lt_-5`、`neg_5_1`、`eq_0`、`pos_1_5`、`gt_5`）
 - `status`：多选（逗号分隔，例如 `1,2`）
 - `start`/`end`：`sync_time` 的 `[start,end)`（UTC 秒）
 
