完善设计文档

--- a/doc/DSCO同步领星设计文档/1.业务需求.md
+++ b/doc/DSCO同步领星设计文档/1.业务需求.md
@@ -324,6 +324,7 @@ Admin 后台支持对 `dsco_order_sync` 的列表查询，并支持导出 CSV：
 补充（一期最新确认）：
 
 - Orders 列表支持对**单个订单**按当前 `status` 执行对应任务（仅处理该 `po_number`，不影响其他订单；`status=5/6` 禁用）。
+- Orders 列表支持“订单一致性检查”（不落库）：支持按时间范围检查（按 `dsco_create_time`），也支持对单个订单检查；检查结果在当前页面临时标记（✓/!），刷新后清空。
 
 约束：
 
