--- a/doc/DSCO同步领星设计文档/4.配置设计.md
+++ b/doc/DSCO同步领星设计文档/4.配置设计.md
@@ -336,6 +336,7 @@ cron 推荐使用 6 段（含秒）的格式：
     "ack_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 200, "multi_ban": false },
     "ship_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 200, "multi_ban": false },
     "invoice_to_dsco": { "enable": true, "cron": "0 */15 * * * *", "size": 50, "multi_ban": false },
+    "check_orders": { "enable": false, "cron": "0 0 2 * * *", "size": 200 },
     "sync_stock": { "enable": true, "cron": "0 0 0 * * *", "size": 200, "sync": true, "use_stream": true },
     "cleanup_exports": { "enable": true, "cron": "0 0 */1 * * *", "size": 1 }
   },
@@ -351,6 +352,7 @@ cron 推荐使用 6 段（含秒）的格式：
 ### 3.2.3 配置建议（经验值）
 
 - `pull_dsco_orders/push_to_lingxing/ack_to_dsco/ship_to_dsco/invoice_to_dsco`：建议 cron 不小于 5 分钟，避免外部 API 压力过大；`size` 从小到大逐步放量。
+- `check_orders`：仅用于 Admin 手动检查（不需要定时触发），建议保持 `enable=false`；`cron` 字段仅用于通过配置校验（占位即可）。
 - `sync_stock`：建议每日 1 次（例如 `0 0 0 * * *`）起步；如需更频繁，优先降低 `size` 控制单次耗时。
 - `cleanup_exports`：建议每小时或每日执行一次（例如 `0 0 */1 * * *`）；阈值与目录由 `env.yaml admin.export.*` 决定。
 - 当出现接口限流/超时：优先降低对应任务 `size` 或拉长 cron 周期，再观察稳定性。
