更新回传物流单号的场景，只要存在物流跟踪号，就执行物流回传

--- a/doc/DSCO同步领星设计文档/1.业务需求.md
+++ b/doc/DSCO同步领星设计文档/1.业务需求.md
@@ -161,7 +161,7 @@
 
 **触发**：定时 + Admin 手动触发（详见第 8 节）。  
 **输入**：本地表 `status=3` 的记录。  
-**动作**：查询领星状态：若“已发货”，解析领星订单发货信息（含物流跟踪号等），调用 DSCO 物流批量同步接口；成功后置 `status=4`，并在本地记录：
+**动作**：查询领星状态：若存在可用物流跟踪号（`tracking_no`），解析领星订单发货信息并调用 DSCO 物流批量同步接口；成功后置 `status=4`，并在本地记录：
 
 - `shipped_tracking_no`：回传物流的跟踪号（任务 4 注入）
 
@@ -248,7 +248,7 @@
 - 任务 1 能分页拉取 DSCO 订单并落到本地状态库，进入“待同步”阶段
 - 任务 2 能把“待同步”推进到“待确认（ack）”
 - 任务 3 在领星订单满足“已审核/已发货”条件时，能 ACK DSCO 并推进到“已确认”
-- 任务 4 在领星订单“已发货”时，能回传物流并推进到“已发货”
+- 任务 4 在领星订单存在可用物流跟踪号（`tracking_no`）时，能回传物流并推进到“已发货”
 - 任务 5 能回传发票并推进到“已创建发票（完成态）”
 - 幂等：任一任务对同一订单重复执行不会产生重复写入/重复回传/状态回退
 - 失败重跑：单个订单失败不会阻塞其他订单推进；失败订单可在下一轮再次处理
