--- a/doc/DSCO同步领星设计文档/7.integration层dsco同步领星任务定义.md
+++ b/doc/DSCO同步领星设计文档/7.integration层dsco同步领星任务定义.md
@@ -275,8 +275,8 @@ DSCO shipment API：`POST /order/shipment/batch/small`（`dsco.Shipment.CreateSm
      - `delivered_at`（字符串时间，用于回传 DSCO 的 shipDate）
      - 若 `delivered_at` 为空：使用 `stock_delivered_at` 兜底
      - `product_info[]`（`sku` + `count`，用于实发数量）
-   - 前置条件（写死）：只处理 `WmsOrder.status = 3`（已发货）的出库单；其他状态不回传（避免 shipDate 为空值/过早回传）。
-2) 若 WmsOrderList 无数据（或筛选后无 `status=3` 的记录），认为“暂未满足回传条件”，等待下次任务重试（不再用订单详情兜底拼 shipDate）。
+   - 前置条件（写死）：只处理存在 `tracking_no` 的出库单；`tracking_no` 为空则不回传。
+2) 若 WmsOrderList 无数据（或筛选后无有效 `tracking_no` 的记录），认为“暂未满足回传条件”，等待下次任务重试（不再用订单详情兜底拼 shipDate）。
 
 3) 全量校验（写死）：
    - `expected_qty`：来自 DSCO 原始订单 `lineItems`（按 SKU 主口径聚合）。
@@ -292,7 +292,7 @@ DSCO shipment API：`POST /order/shipment/batch/small`（`dsco.Shipment.CreateSm
 
 发货时间口径（已确认，写死）：
 
-- DSCO `shipDate` 统一取自 `WmsOrder.status=3` 的出库单：优先 `WmsOrder.DeliveredAt`；为空则 `WmsOrder.StockDeliveredAt` 兜底；并转换为 DSCO 要求的 ISO 8601/RFC3339（如 `YYYY-MM-DDTHH:MM:SSZ`）。
+- DSCO `shipDate` 统一取自“有 `tracking_no` 的出库单”：优先 `WmsOrder.DeliveredAt`；为空则 `WmsOrder.StockDeliveredAt` 兜底；并转换为 DSCO 要求的 ISO 8601/RFC3339（如 `YYYY-MM-DDTHH:MM:SSZ`）。
 
 字段映射（最小必要字段）：
 
